# PyCommandLine

./: README.md  setup.cfg
.github/workflows/: package.yml
pycommand_line/: conf.py  manage.py
pycommand_line/command_line/: administrative.py  command_line.py
pycommand_line/utils/: administrative.py  command_line.py
