[metadata]
name = pycommand_line
version = 0.2
description = A package for creating command line modules in python
description_content_type = text/plain
long_description = file: README.md
long_description_content_type = text/markdown
author = Feluxerich
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    pycl = pycommand_line.manage:main
